RN 0.57 issue description

--- a/content/blog/2018-10-14-boaty-part-1.md
+++ b/content/blog/2018-10-14-boaty-part-1.md
@@ -55,6 +55,8 @@ You can now run the app in the iOS simulator:
 react-native run-ios
 ```
 
+> Note: as of React Native 0.57.2, if you are using Xcode 10 there is a [known issue](https://github.com/facebook/react-native/issues/20774) that prevents the app from compiling correctly. If you see an error `Build input file cannot be found: '<some-dir>/node_modules/react-native/third-party/double-conversion-1.1.6/src/strtod.cc` then run the following command: `curl -L https://git.io/rn-57-third-party | bash` (this will fetch and configure the necessary third party dependencies for the project to run correctly under Xcode 10).
+
 Alternatively, if you have an Android device, plug it in to your computer, and [enable USB Debugging](https://developer.android.com/studio/debug/dev-options). Then you can run the app on your Android device with:
 
 ``` bash
