Pin TypeScript version

--- a/content/blog/2018-10-16-boaty-part-2.md
+++ b/content/blog/2018-10-16-boaty-part-2.md
@@ -46,8 +46,10 @@ As of v0.57, React Native supports TypeScript natively, but we still need to add
 - Install the TypeScript compiler locally, and the typings for React and React Native:
 
 ``` bash
-npm install -D typescript @types/react @types/react-native
+npm install -D typescript@3.0.3 @types/react @types/react-native
 ```
+
+> Note: we are specifically installing TypeScript v3.0.3 since at the time of writing, the react-native typings [don't fully support the latest TypeScript version](https://github.com/DefinitelyTyped/DefinitelyTyped/issues/29265).
 
 - Create a new file `tsconfig.json` in the root of the project, and add the following contents:
 
