--- a/content/blog/2018-10-14-boaty-part-1.md
+++ b/content/blog/2018-10-14-boaty-part-1.md
@@ -5,14 +5,16 @@ categories = [
   "reactnative",
   "mobile"
 ]
-description = "React Native is a framework for building native iOS and Android apps using JavaScript. This is the first in a series of posts aimed at building a React Native app from scratch."
+description = "React Native is a framework for building native iOS and Android apps using JavaScript. This is the first in a series of posts aimed at building a React Native app from the ground up."
 +++
 
 [React Native](https://facebook.github.io/react-native/) is a framework for building native iOS and Android apps using JavaScript. It builds upon the foundations laid by [React](https://reactjs.org), allowing you to build an app in a declarative way - using JSX, you inform React Native of your intentions (_I'd like a button here, please_) and the framework takes care of generating the (native) code to actually display a button to the screen.
 
 I've been working happily with React Native for over a year now, and I am very happy with the results. There have been a lot of learnings along the way, which I'm going to attempt to distill into a few blog posts.
 
-> Over this short mini-series, I'm going to build a simple app, _Boaty_. We'll be learning how to set up your environment before building and deploying the app for testing. You can follow along or [see the finished code here](https://github.com/studiozeffa/boaty-app).
+Over this mini-series, I'm going to build a simple app, _Boaty_. We'll be learning how to set up your environment before building and deploying the app for testing. You can follow along or [see the finished code here](https://github.com/studiozeffa/boaty-app).
+
+> Note: the goal of this series is to document some of the additional concerns surrounding the building and deployment of a React Native app, such as app scaffolding, app icon/launch screen creation, and deployment to the App Store. It isn't intended as a walkthough of writing React or React Native code - this is assumed knowledge. If you need to brush up on this, I'd recommend checking out the [official tutorial](https://facebook.github.io/react-native/docs/tutorial) or the notes from my own [React Native training course](https://github.com/studiozeffa/react-native-training-course/blob/master/notes/components.md). The series also assumes TypeScript knowledge - refer to the [TypeScript documentation](https://www.typescriptlang.org/docs) or the notes from my own [TypeScript training course](https://github.com/studiozeffa/typescript-training-course) to get a good grounding here.
 
 Without further ado, let's dive in.
 
@@ -72,3 +74,7 @@ You can find the reference code for this post [in the part-01 tag of the GitHub 
 ## Next Steps
 
 You should now have a working React Native app, running on the iOS simulator or Android device. In [part 2]({{< relref "2018-10-16-boaty-part-2.md" >}}), we'll learn how to set up your editing environment to improve the development experience.
+
+---
+
+If you'd like to learn more about building an app with TypeScript and/or React Native, I run in-person or remote workshops which walk through the fundamentals of building apps with these cutting-edge tools. If you are interested in learning more, [let me know](mailto:tom.spencer@studiozeffa.com) and I'd be happy to chat further!
