--- a/content/blog/2018-10-16-boaty-part-2.md
+++ b/content/blog/2018-10-16-boaty-part-2.md
@@ -10,7 +10,7 @@ categories = [
 description = "In the second of a series of posts, we'll learn how to set up your development environment to build a React Native app."
 +++
 
-> Note: this is part 2 of a series of posts, aimed at building a React Native app from scratch. If you haven't already done so, it's worth starting from [the beginning of the series]({{< relref "2018-10-14-boaty-part-1.md" >}}).
+> Note: this is part 2 of a series of posts, aimed at building a React Native app from the ground up. If you haven't already done so, it's worth starting from [the beginning of the series]({{< relref "2018-10-14-boaty-part-1.md" >}}).
 
 In [part 1]({{< relref "2018-10-14-boaty-part-1.md" >}}), we set up our local machine to compile and run a React Native app, and scaffolded a new app _Boaty_.
 
@@ -280,3 +280,11 @@ We've set up our editor to make React Native development much smoother with the 
 - Husky and Lint-staged, to automatically format our code and optimise our assets before a commit
 
 The code for this section can be found [on the accompanying GitHub repo](https://github.com/studiozeffa/boaty-app/tree/part-02), make sure to check out the [changes to the code from part 1](https://github.com/studiozeffa/boaty-app/compare/part-01...part-02).
+
+## Next Steps
+
+You should now have a fully loaded development environment, which serves as an excellent foundation for implementing a React Native app. In [part 3]({{< relref "2018-10-22-boaty-part-3.md" >}}), we'll build the app.
+
+---
+
+If you'd like to learn more about building an app with TypeScript and/or React Native, I run in-person or remote workshops which walk through the fundamentals of building apps with these cutting-edge tools. If you are interested in learning more, [let me know](mailto:tom.spencer@studiozeffa.com) and I'd be happy to chat further!
