Switched to in-built syntax highlighting, added copy button

--- a/content/blog/2018-10-22-boaty-part-3.md
+++ b/content/blog/2018-10-22-boaty-part-3.md
@@ -57,7 +57,7 @@ Our presentation component will include:
 
 The code for our presentation component is below. Paste it into a new file located at `src/components/ImageViewer.tsx`:
 
-``` tsx
+``` jsx
 import React from 'react';
 import {
   ActivityIndicator,
@@ -145,7 +145,7 @@ Our app will include a single container component, which is responsible for:
 
 The container is therefore responsible for rendering the presentation component. The code for our container is below, paste it into a new file located at `src/screens/ImageScreen.tsx`:
 
-``` tsx
+``` jsx
 import React, { Component } from 'react';
 import { Image } from 'react-native';
 
