--- a/content/blog/2018-10-22-boaty-part-3.md
+++ b/content/blog/2018-10-22-boaty-part-3.md
@@ -40,6 +40,27 @@ A good tool for producing simple wireframes is at [wireframe.cc](https://wirefra
 
 We're ready to start writing some code!
 
+### Orientation
+
+As shown in the wireframe, our app is designed to work in portrait mode only. We can lock the app to ensure it cannot be rotated from portrait mode by making some modifications to files in the `ios` and `android` folders.
+
+#### iOS
+
+Open the file `/ios/Boaty/Info.plist` and remove the following lines:
+
+``` xml
+<string>UIInterfaceOrientationLandscapeLeft</string>
+<string>UIInterfaceOrientationLandscapeRight</string>
+```
+
+#### Android
+
+Open the file `android/app/src/main/AndroidManifest.xml`. In the MainActivity section, underneath the `android:configChanges` entry, add the following attribute:
+
+``` xml
+android:screenOrientation="portrait"
+```
+
 ### Components
 
 React apps are built using a component-based architecture. In essence, every UI element that is visible on the page is built as a _component_.
